--- a/lza_pad/src/main/res/values-1080x1920/dimens.xml
+++ b/lza_pad/src/main/res/values-1080x1920/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="home_header_height">210dp</dimen>
     <dimen name="home_footer_height">110dp</dimen>
 
+    <!-- ShelvesView -->
+    <dimen name="shelves_view_bg_vertical_offset">70dp</dimen>
+
 </resources>
