--- a/lza_pad/src/main/res/layout/ebook_shelves.xml
+++ b/lza_pad/src/main/res/layout/ebook_shelves.xml
@@ -21,7 +21,7 @@
         android:id="@+id/ebook_list_grid_shelves"
         />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="35dp"
         android:layout_height="wrap_content"
         android:background="@drawable/pagebtn_left"
         android:layout_alignParentLeft="true"
@@ -30,7 +30,7 @@
         android:id="@+id/ebook_list_page_prev"
         />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="35dp"
         android:layout_height="wrap_content"
         android:background="@drawable/pagebtn_right"
         android:layout_alignParentRight="true"
