--- a/lza_pad/src/main/res/layout/header.xml
+++ b/lza_pad/src/main/res/layout/header.xml
@@ -17,19 +17,53 @@
             style="@style/Header_DigitalClock"
             android:id="@+id/header_digital_clock"
             />
-
     </LinearLayout>
-    <LinearLayout
-        style="@style/UniversalWrapAndMatch"
-        android:orientation="vertical"
-        android:padding="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_weight="1">
+
         <!-- 天气 -->
-        <com.lza.pad.ui.widget.WeatherPanel
+        <!--<com.lza.pad.ui.widget.WeatherPanel
             style="@style/UniversalMatchParent"
             android:id="@+id/header_weather_panel"
             weather:city="nanjing"
-            />
+            />-->
+    <LinearLayout
+        style="@style/UniversalWrapAndMatch"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/header_weather_panel_bg"
+        android:layout_weight="1"
+        android:padding="10dp"
+        android:layout_alignParentRight="true">
+        <RelativeLayout
+            style="@style/UniversalWrapContent"
+            android:layout_weight="2">
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:id="@+id/weather_img"
+                android:src="@drawable/header_weather_panel_sunny"
+                android:padding="10dp"
+                android:layout_centerInParent="true"
+                />
+        </RelativeLayout>
+        <LinearLayout
+            style="@style/UniversalWrapAndMatch"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_weight="3">
+            <TextView
+                style="@style/WeatherTempText"
+                android:id="@+id/weather_temperature"
+                />
+            <TextView
+                style="@style/WeatherInfoText"
+                android:id="@+id/weather_info"
+                />
+            <TextView
+                style="@style/WeatherInfoText"
+                android:id="@+id/weather_city"
+                />
+        </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
