--- a/lza_pad/src/main/res/layout/cache_data.xml
+++ b/lza_pad/src/main/res/layout/cache_data.xml
@@ -40,6 +40,13 @@
         android:layout_weight="1"
         android:id="@+id/cache_data_start"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cache_begin"
+        android:layout_weight="1"
+        android:id="@+id/cache_data_test"
+        />
 </LinearLayout>
 <TextView
     android:layout_width="match_parent"
