--- a/lza_pad/src/main/res/layout/cache_data.xml
+++ b/lza_pad/src/main/res/layout/cache_data.xml
@@ -6,11 +6,11 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:gravity="center">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="center">
         <TextView
             android:layout_width="wrap_content"
@@ -26,27 +26,32 @@
             android:id="@+id/cache_data_page_propmt"
             />
     </LinearLayout>
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cache_edit_page"
-        android:layout_weight="1"
-        android:id="@+id/cache_data_edit_page"
-        />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cache_begin"
-        android:layout_weight="1"
-        android:id="@+id/cache_data_start"
-        />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cache_begin"
-        android:layout_weight="1"
-        android:id="@+id/cache_data_test"
-        />
+        android:gravity="center">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cache_edit_page"
+            android:layout_weight="1"
+            android:id="@+id/cache_data_edit_page"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cache_begin"
+            android:layout_weight="1"
+            android:id="@+id/cache_data_start"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cache_begin"
+            android:layout_weight="1"
+            android:id="@+id/cache_data_test"
+            />
+    </LinearLayout>
 </LinearLayout>
 <TextView
     android:layout_width="match_parent"
