--- a/lza_pad/src/main/res/layout/ctr_title_bar.xml
+++ b/lza_pad/src/main/res/layout/ctr_title_bar.xml
@@ -10,9 +10,10 @@
         android:id="@+id/title_bar_title"
         />
     <!-- 学科按钮 -->
-    <Button
+    <!--<Button
         style="@style/EbookListSubjectButton"
+        android:visibility="gone"
         android:id="@+id/title_bar_subject"
-        />
+        />-->
     <!-- 学科按钮 -->
 </RelativeLayout>
