--- a/lza_pad_core/src/main/res/values/arrays.xml
+++ b/lza_pad_core/src/main/res/values/arrays.xml
@@ -50,9 +50,9 @@
         <item>com.lza.pad.ui.fragment.EbookShelvesFragment</item>
         <item>com.lza.pad.ui.fragment.EbookShelvesFragment</item>
         <item>com.lza.pad.ui.fragment.EbookShelvesFragment</item>
-        <item>com.lza.pad.ui.fragment.NewsFragment</item>
-        <item>com.lza.pad.ui.fragment.NewsFragment</item>
-        <item>com.lza.pad.ui.fragment.NewsFragment</item>
+        <item>com.lza.pad.ui.fragment.NewsViewPagerFragment</item>
+        <item>com.lza.pad.ui.fragment.NewsViewPagerFragment</item>
+        <item>com.lza.pad.ui.fragment.NewsViewPagerFragment</item>
         <item>com.lza.pad.ui.fragment.VideoPlayFragment</item>
         <item>com.lza.pad.ui.fragment.EbookShelvesFragment</item>
         <item>com.lza.pad.ui.fragment.HelpFragment</item>
