--- a/lza_pad_core/src/main/res/values/arrays.xml
+++ b/lza_pad_core/src/main/res/values/arrays.xml
@@ -49,7 +49,7 @@
         <item>com.lza.pad.ui.fragment.EbookShelvesFragment</item>
         <item>com.lza.pad.ui.fragment.EbookShelvesFragment</item>
         <item>com.lza.pad.ui.fragment.EbookShelvesFragment</item>
-        <item>com.lza.pad.ui.fragment.EbookShelvesFragment</item>
+        <item>com.lza.pad.ui.fragment.BookSearchFragment</item>
         <item>com.lza.pad.ui.fragment.NewsViewPagerFragment</item>
         <item>com.lza.pad.ui.fragment.NewsViewPagerFragment</item>
         <item>com.lza.pad.ui.fragment.NewsViewPagerFragment</item>
