--- a/lza_pad/src/main/res/values/theme_default.xml
+++ b/lza_pad/src/main/res/values/theme_default.xml
@@ -34,6 +34,10 @@
         <item name="android:background">@drawable/ebook_list_bg</item>
     </style>
 
+    <style name="SearchBackground" parent="UniversalMatchParent">
+        <item name="android:background">@drawable/searchbook_bg</item>
+    </style>
+
     <!-- 标题文字样式 -->
     <style name="EbookListTitle" parent="UniversalWrapContent">
         <item name="android:layout_centerInParent">true</item>
