--- a/lza_pad/src/main/res/layout/ctr_title_bar.xml
+++ b/lza_pad/src/main/res/layout/ctr_title_bar.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/UniversalMatchParent"
-    android:background="@drawable/ebook_list_title_bg" >
+    style="@style/UniversalMatchAndWrap"
+    android:background="@drawable/ebook_list_title_bg"
+    android:id="@+id/title_bar_layout">
     <!-- 标题栏 -->
     <TextView
         style="@style/EbookListTitle"
@@ -10,10 +11,10 @@
         android:id="@+id/title_bar_title"
         />
     <!-- 学科按钮 -->
-    <!--<Button
+    <Button
         style="@style/EbookListSubjectButton"
         android:visibility="gone"
         android:id="@+id/title_bar_subject"
-        />-->
+        />
     <!-- 学科按钮 -->
 </RelativeLayout>
