--- a/lza_pad/src/main/res/layout/ebook_content.xml
+++ b/lza_pad/src/main/res/layout/ebook_content.xml
@@ -20,6 +20,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@android:id/list"
+            android:cacheColorHint="#00000000"
+            android:listSelector="#00000000"
             android:background="@android:color/white"
             />
     </LinearLayout>
