--- a/lza_pad/src/main/res/layout/home.xml
+++ b/lza_pad/src/main/res/layout/home.xml
@@ -3,11 +3,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/home_main_layout">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/home_header_height"
-        android:layout_alignParentTop="true"
         android:background="@color/green"
         android:id="@+id/home_header"
         />
@@ -20,7 +20,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/home_footer_height"
-        android:layout_alignParentBottom="true"
         android:background="@color/yellow"
         android:id="@+id/home_footer"
         />
